# rust-simplicity

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  nightly-version  update_jets.sh
.devcontainer/: Dockerfile
.github/workflows/: fuzz.yml  main.yml  rust.yml
contrib/: test.sh
data/: bitcoin_jet_bench_2025-12-03_22-45-17.json  bitcoin_jet_bench_2025-12-10_17-31-55.json  elements_jet_bench_2025-12-03_22-45-17.json  jet_bench_2023-03-07_21-56-43.json  jet_bench_2023-03-08_08-07-35.json  jet_bench_2024-07-22_17-33-28.json  jet_bench_2024-09-12.json  jet_bench_2025-10-09_14-34-26.json
fuzz/: Cargo.toml  README.md  cycle.sh  fuzz-util.sh  fuzz.sh  generate-files.sh  honggfuzz-rs.nix  shell.nix  travis-fuzz.sh
fuzz/fuzz_lib/: lib.rs  program.rs
fuzz/fuzz_targets/: c_rust_merkle.rs  construct_type.rs  construct_value.rs  decode_natural.rs  decode_program.rs  decode_witness.rs  encode_simplang.rs  human_encoding.rs  parse_compile.rs  parse_human.rs  parse_simplang.rs  prune_value.rs  regression_286.rs  regression_value.rs  rtt_dag.rs  rtt_natural.rs  rtt_program.rs  rtt_program_witness.rs  rtt_witness.rs
fuzz/simplicityC_test_inputs/: test_0  test_1  test_10  test_100  test_1000  test_1001  test_1002  test_1003  test_1004  test_1005  test_1006  test_1007  test_1008  test_1009  test_101  test_1010  test_1011  test_1012  test_1013  test_1014  test_1015  test_1016  test_1017  test_1018  test_1019  test_102  test_1020  test_1021  test_1022  test_1023  test_1024  test_1025  test_1026  test_1027  test_1028  test_1029  test_103  test_1030  test_1031  test_1032  (+1777 more)
jets-bench/: Cargo.toml  README.md
jets-bench/benches/elements/: buffer.rs  data_structures.rs  env.rs  input.rs  main.rs  params.rs
jets-bench/src/: buffer.rs  check_all_jets.rs  data_structures.rs  env.rs  input.rs  lib.rs  main.rs  params.rs
jets_bench/: Cargo.toml
jets_bench/benches/elements/: data_structures.rs  env.rs  main.rs
simpcli/: Cargo.toml
simpcli/example_programs/: bip340.simpl  eq-plus-one.simpl  fixpoint.simpl  twowit.simpl
simpcli/src/: main.rs
simplang/: Cargo.toml  hmm.simpl
simplang/data/: bitflip.simpl  comp.simpl  compwit.simpl  disconnect.simpl
simplang/data/programs/: bip340.simpl  hidden.simpl  share-wit.simpl  test.simpl  wit-eq.simpl
simplang/src/: lib.rs  parse.rs
simplang/src/parse/: ast.rs  error.rs  mod.rs
simplang/src/serialize/: mod.rs  names.rs
simplicity-sys/: Cargo.toml  README.md  build.rs  vendor-simplicity.sh  vendor_simplicity.sh
simplicity-sys/depend/: bitcoin_env.c  elements_env.c  env.c  jets_wrapper.c  simplicity-HEAD-revision.txt  simplicity_alloc.h.patch  wrapper.c  wrapper.h
simplicity-sys/depend/simplicity/: bitstream.c  bitstream.h  bitstring.h  cmr.c  cmr.h  dag.c  dag.h  decodeCoreJets.inc  deserialize.c  deserialize.h  eval.c  eval.h  frame.c  frame.h  jets-secp256k1.c  jets.c  jets.h  primitive.h  rsort.c  rsort.h  sha256.c  sha256.h  sha256_x86.inc  simplicity_alloc.h  simplicity_assert.h  taptweak.h  test  test.c  type.c  type.h  typeInference.c  typeInference.h
simplicity-sys/depend/simplicity/bitcoin/: bitcoinJets.c  bitcoinJets.h  cmr.c  decodeBitcoinJets.inc  env.c  exec.c  ops.c  ops.h  primitive.c  primitive.h  primitiveJetNode.inc  txEnv.c  txEnv.h
simplicity-sys/depend/simplicity/elements/: cmr.c  decodeElementsJets.inc  elementsJets.c  elementsJets.h  env.c  exec.c  ops.c  ops.h  primitive.c  primitive.h  primitiveEnumJet.inc  primitiveEnumTy.inc  primitiveInitTy.inc  primitiveJetNode.inc  txEnv.c  txEnv.h
simplicity-sys/depend/simplicity/include/simplicity/: cmr.h
simplicity-sys/depend/simplicity/include/simplicity/bitcoin/: cmr.h  env.h  exec.h
simplicity-sys/depend/simplicity/include/simplicity/elements/: cmr.h  env.h  exec.h
simplicity-sys/depend/simplicity/primitive/elements/: decodeElementsJets.inc  elementsJets.c  elementsJets.h  env.c  exec.c  ops.c  ops.h  primitive.c  primitive.h  primitiveJetNode.inc
simplicity-sys/src/: alloc.rs  bitstream.rs  bitstring.rs  dag.rs  error.rs  ffi.rs  lib.rs  test.rs  tests.rs  util.rs
simplicity-sys/src/c_jets/: c_env.rs  c_frame.rs  exec_ffi.rs  frame_ffi.rs  jets_ffi.rs  jets_wrapper.rs  mod.rs
simplicity-sys/src/c_jets/c_env/: bitcoin.rs  elements.rs  mod.rs
simplicity-sys/src/tests/: ffi.rs  mod.rs
simplicity-sys/wasm-sysroot/: assert.h  stdio.h
src/: .rustfmt.toml  analysis.rs  bititer.rs  bitwriter.rs  cmr.rs  context.rs  dag.rs  decode.rs  encode.rs  exec.rs  hex.rs  inference.rs  lib.rs  macros.rs  main.rs  natural.rs  object.rs  program.rs  sharing.rs  types.rs  util.rs  value.rs
src/bit_encoding/: bititer.rs  bitwriter.rs  decode.rs  encode.rs  mod.rs
src/bit_machine/: exec.rs  frame.rs  limits.rs  mod.rs  tracker.rs
src/core/: commit.rs  common.rs  context.rs  iter.rs  mod.rs  node.rs  program.rs  redeem.rs  term.rs  term_dag.rs  typed.rs  types.rs  value.rs
src/extension/: $a  bitcoin.rs  dummy.rs  elements.rs  jets.rs  mod.rs
src/extension/elements/: data_structures.rs  jets.rs  mod.rs  test_sighashall.rs
src/human_encoding/: README.md  error.rs  mod.rs  named_node.rs  serialize.rs
src/human_encoding/parse/: ast.rs  mod.rs
src/jet/: core.rs  mod.rs  type_name.rs
src/jet/application/: core.rs  mod.rs
src/jet/bitcoin/: c_env.rs  encode.rs  environment.rs  exec.rs  execute.rs  mod.rs
src/jet/core/: mod.rs
src/jet/elements/: c_env.rs  exec.rs  (+3 more)
src/merkle/: amr.rs  cmr.rs  common.rs  ihr.rs  imr.rs  mod.rs  tmr.rs
src/node/: commit.rs  construct.rs  convert.rs  disconnect.rs  display.rs  finalize.rs  hiding.rs  inner.rs  mod.rs  redeem.rs  witness.rs
src/policy/: ast.rs  compiler.rs  descriptor.rs  embed.rs  error.rs  iter.rs  key.rs  lift.rs  mod.rs  policy.rs  satisfy.rs  serialize.rs  sighash.rs
src/serializers/: mod.rs  stringify.rs
src/test_progs/: hashblock.rs  mod.rs  schnorr0.rs  schnorr6.rs  sighash_all.rs
src/types/: arrow.rs  context.rs  final_data.rs  incomplete.rs  mod.rs  precomputed.rs  union_bound.rs  variable.rs
tests/: bitcoin_introspection_jets.rs
(+14 files in other folders)
