[package]
name = "simplicity"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
edition = "2021"
rust-version = "1.58.0"

[features]
default = ["bitcoin", "elements"]
test-utils = ["simplicity-sys/test-utils"]
serde = ["actual-serde", "bitcoin/serde", "elements/serde"]

[lib]
name = "simplicity"
path = "src/lib.rs"

[dependencies]
bitcoin = { version = "0.31.0", optional = true }
bitcoin-miniscript = { package = "miniscript", version = "11.0.0" }
byteorder = "1.3"
elements = { version = "0.24.0", optional = true }
hashes = { package = "bitcoin_hashes", version = "0.13" }
hex = { package = "hex-conservative", version = "0.1.1" }
santiago = "1.3"
simplicity-sys = { version = "0.1.0", path = "./simplicity-sys" }
actual-serde = { package = "serde", version = "1.0.103", features = [
    "derive",
], optional = true }

[dev-dependencies]
simplicity-sys = { version = "0.1.0", path = "./simplicity-sys", features = [
    "test-utils",
] }

[workspace]
members = ["simpcli", "simplicity-sys"]
# Should be manually/separately tested since it has a massive dep tree
# and not follow MSRV
# FIXME we also need to include 'fuzz' in here because it currently uses
# a patched bitcoin_hashes. When we remove that, we can move it back
# to "members"
exclude = ["jets-bench", "fuzz"]
