[package]
name = "simplicity-lang"
version = "0.2.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/BlockstreamResearch/rust-simplicity/"
repository = "https://github.com/BlockstreamResearch/rust-simplicity/"
documentation = "https://docs.rs/simplicity-lang/"
description = "General purpose library for processing Simplicity programs"
edition = "2021"
rust-version = "1.58.0"

[features]
default = ["bitcoin", "elements"]
test-utils = ["simplicity-sys/test-utils"]
serde = ["actual-serde", "bitcoin/serde", "elements/serde"]

[lib]
name = "simplicity"
path = "src/lib.rs"

[dependencies]
bitcoin = { version = "0.31.0", optional = true }
bitcoin-miniscript = { package = "miniscript", version = "11.0.0" }
byteorder = "1.3"
elements = { version = "0.24.0", optional = true }
hashes = { package = "bitcoin_hashes", version = "0.13" }
hex = { package = "hex-conservative", version = "0.1.1" }
santiago = "1.3"
simplicity-sys = { version = "0.2.0", path = "./simplicity-sys" }
actual-serde = { package = "serde", version = "1.0.103", features = [
    "derive",
], optional = true }

[dev-dependencies]
simplicity-sys = { version = "0.2.0", path = "./simplicity-sys", features = [
    "test-utils",
] }

[workspace]
members = ["simpcli", "simplicity-sys", "fuzz"]
# Should be manually/separately tested since it has a massive dep tree
# and not follow MSRV
exclude = ["jets-bench"]
