[package]
name = "simplicity-lang"
version = "0.4.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/BlockstreamResearch/rust-simplicity/"
repository = "https://github.com/BlockstreamResearch/rust-simplicity/"
documentation = "https://docs.rs/simplicity-lang/"
description = "General purpose library for processing Simplicity programs"
edition = "2021"
rust-version = "1.78.0"

[features]
default = ["elements"]
elements = ["dep:elements", "bitcoin"]
test-utils = ["simplicity-sys/test-utils"]
serde = ["dep:serde", "bitcoin/serde", "elements/serde"]

[lib]
name = "simplicity"
path = "src/lib.rs"

[dependencies]
bitcoin = { version = "0.32.0", optional = true }
bitcoin-miniscript = { package = "miniscript", version = "12.0.0" }
byteorder = "1.3"
elements = { version = "0.25.0", optional = true, default-features = false }
hashes = { package = "bitcoin_hashes", version = "0.14" }
hex = { package = "hex-conservative", version = "0.1.1" }
santiago = "1.3"
simplicity-sys = { version = "0.4.0", path = "./simplicity-sys" }
serde = { version = "1.0.103", features = ["derive"], optional = true }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
simplicity-sys = { version = "0.4.0", path = "./simplicity-sys", features = [
    "test-utils",
] }

[workspace]
members = ["simpcli", "simplicity-sys", "fuzz"]
# Should be manually/separately tested since it has a massive dep tree
# and not follow MSRV
exclude = ["jets-bench"]

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(bench)'] }

[lints.clippy]
# Exclude lints we don't think are valuable.
needless_question_mark = "allow" # https://github.com/rust-bitcoin/rust-bitcoin/pull/2134
manual_range_contains = "allow" # More readable than clippy's format.
uninlined_format_args = "allow" # This is a subjective style choice.
float_cmp = "allow" # Bitcoin floats are typically limited to 8 decimal places and we want them exact.
match_bool = "allow" # Adds extra indentation and LOC.
match_same_arms = "allow" # Collapses things that are conceptually unrelated to each other.
must_use_candidate = "allow" # Useful for audit but many false positives.
similar_names = "allow" # Too many (subjectively) false positives.
# Cast-related lints
cast_lossless = "warn"
cast_possible_truncation = "allow" # All casts should include a code comment (except test code).
cast_possible_wrap = "allow" # Same as above re code comment.
cast_precision_loss = "warn"
cast_ptr_alignment = "warn"
cast_sign_loss = "allow" # All casts should include a code comment (except in test code).
