[package]
name = "jets-bench"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "simplicity_bench"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
serde_cbor = "0.11.1"
serde_json = "1.0.70"
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.19"
simplicity-lang = { path = ".." }
criterion = "0.4.0"
rand = "0.8"

[[bench]]
name = "elements"
harness = false
