[package]
name = "jets_bench"
version = "0.1.0-NEVER-USE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_cbor = "0.11.1"
serde_json = "1.0.70"
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.19"
simplicity = {version = "0.1.0", path = "../"}
criterion = "0.4.0"
rand = "0.8"
bitcoin_hashes = "0.11.0"

[[bench]]
name = "elements"
harness = false
