[package]
name = "simpcli"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
# todo add lexopt for command line parsing
simplicity-lang = { version = "0.3", path = "..", features = [ "serde", "elements" ] }

[[bin]]
name = "simpcli"
path = "src/main.rs"
