[package]
name = "simplang"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# todo add lexopt for command line parsing
santiago = "1.3"
simplicity = { version = "0.1", path = "..", features = [ "serde", "elements" ] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "simplang"
path = "src/bin/simplang.rs"

