[package]
name = "simplicity-sys"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"
hashes = { package = "bitcoin_hashes", version = "0.12" }

[features]
test-utils = []
