[package]
name = "simplicity-sys"
version = "0.3.0"
license = "CC0-1.0"
homepage = "https://github.com/BlockstreamResearch/rust-simplicity/"
repository = "https://github.com/BlockstreamResearch/rust-simplicity/"
documentation = "https://docs.rs/simplicity-sys/"
description = "FFI bindings to libsimplicity"
edition = "2021"
rust-version = "1.63.0"

[build-dependencies]
cc = "1.0.83"

[dependencies]
hashes = { package = "bitcoin_hashes", version = "0.14" }

[features]
test-utils = []

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(fuzzing)'] }
