[package]
name = "simplicity-sys"
version = "0.6.0"
license = "CC0-1.0"
homepage = "https://github.com/BlockstreamResearch/rust-simplicity/"
repository = "https://github.com/BlockstreamResearch/rust-simplicity/"
documentation = "https://docs.rs/simplicity-sys/"
description = "FFI bindings to libsimplicity"
edition = "2021"
rust-version = "1.74.0"
build = "build.rs"
links = "rustsimplicity_0_6"

[build-dependencies]
cc = "1.0.83"

[dependencies]
hashes = { package = "bitcoin_hashes", version = "0.14" }

[features]
test-utils = []

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
# Exclude lints we don't think are valuable.
needless_question_mark = "allow" # https://github.com/rust-bitcoin/rust-bitcoin/pull/2134
manual_range_contains = "allow" # More readable than clippy's format.
uninlined_format_args = "allow" # This is a subjective style choice.
float_cmp = "allow" # Bitcoin floats are typically limited to 8 decimal places and we want them exact.
match_bool = "allow" # Adds extra indentation and LOC.
match_same_arms = "allow" # Collapses things that are conceptually unrelated to each other.
must_use_candidate = "allow" # Useful for audit but many false positives.
similar_names = "allow" # Too many (subjectively) false positives.
